prod/ingress/ingress-comame-xyz.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-comame-xyz
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - comame.xyz
        - vpnserver.comame.xyz
        - voms-timeline.comame.xyz
        - kikoh-procon-sample.comame.xyz
      secretName: comame-xyz
  rules:
    - host: comame.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: comame-xyz
                port:
                  number: 80
    - host: vpnserver.comame.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vpnserver-status
                port:
                  number: 2000
    - host: voms-timeline.comame.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: voms-timeline
                port:
                  number: 80
    - host: kikoh-procon-sample.comame.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kikoh-procon-sample
                port:
                  number: 80
    - host: dotfiles.comame.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dotfiles
                port:
                  number: 80

---

apiVersion: v1
kind: Service
metadata:
  name: comame-xyz
  namespace: production
spec:
  type: ExternalName
  externalName: comame-xyz.comame-xyz.svc.cluster.local

---

apiVersion: v1
kind: Service
metadata:
  name: voms-timeline
  namespace: production
spec:
  type: ExternalName
  externalName: voms-timeline.comame-xyz.svc.cluster.local

---

apiVersion: v1
kind: Service
metadata:
  name: kikoh-procon-sample
  namespace: production
spec:
  type: ExternalName
  externalName: kikoh-procon-sample.comame-xyz.svc.cluster.local

---

apiVersion: v1
kind: Service
metadata:
  name: dotfiles
  namespace: production
spec:
  type: ExternalName
  externalName: dotfiles.comame-xyz.svc.cluster.local

---

apiVersion: v1
kind: Service
metadata:
  name: vpnserver-status
  namespace: production
spec:
  type: ExternalName
  externalName: pi.comame.dev
