prod/ingress/ingress-dashboard.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dashboard
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/issuer: letsencrypt
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - dash.cluster.comame.dev
      secretName: dash-comame-dev
  rules:
    - host: dash.cluster.comame.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 443

---

apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: production
spec:
  type: ExternalName
  externalName: kubernetes-dashboard.kubernetes-dashboard.svc.cluster.local
