prod/ingress/ingress-guacamole.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-guacamole
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: letsencrypt
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - guacamole.comame.dev
      secretName: guacamole-comame-dev
  rules:
    - host: guacamole.comame.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guacamole
                port:
                  number: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: guacamole
  namespace: production
spec:
  type: ExternalName
  externalName: guacamole.guacamole.svc.cluster.local
