prod/ingress/ingress-registry.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-registry
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 5g
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: https://dash.registry.comame.dev
    nginx.ingress.kubernetes.io/cors-expose-headers: docker-content-digest
    cert-manager.io/issuer: letsencrypt
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - registry.comame.dev
        - dash.registry.comame.dev
      secretName: registry-comame-dev
  rules:
    - host: registry.comame.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry
                port:
                  number: 5000
    - host: dash.registry.comame.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-dashboard
                port:
                  number: 80

---

apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: production
spec:
  type: ExternalName
  externalName: registry.registry.svc.cluster.local

---

apiVersion: v1
kind: Service
metadata:
  name: registry-dashboard
  namespace: production
spec:
  type: ExternalName
  externalName: registry-dashboard.registry.svc.cluster.local
